# fusion-code-orchestrator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: coding-standards.mdc  project-overview.mdc  security.mdc  testing.mdc
docs/: ARCHITECTURE.md  CLAUDE_CODE_AB.md  COSTS.md  README.md
docs/superpowers/specs/: 2026-07-08-fusion-v2-cheap-panel-design.md
evals/datasets/: architecture_cases.jsonl  code_review_cases.jsonl  debugging_cases.jsonl  implementation_plan_cases.jsonl
evals/my-task/: benchmark-results.md  fusion-answer.md  opus-answer.md  task.md
evals/runners/: compare_cost.py  compare_pipelines.py  run_offline_eval.py
plugin/: README.md  plugin.json
plugin/commands/: fusion-ab.md  fusion-debug.md  fusion-decide.md  fusion-eval.md  fusion-plan.md  fusion-review.md
plugin/mcp/: server.json
plugin/skills/fusion-debug/: SKILL.md
plugin/skills/fusion-decide/: SKILL.md
plugin/skills/fusion-eval/: SKILL.md
plugin/skills/fusion-orchestrator/: SKILL.md
plugin/skills/fusion-plan/: SKILL.md
plugin/skills/fusion-review/: SKILL.md
src/fusion/: __init__.py  main.py
src/fusion/agent/: __init__.py  loop.py  prompts.py  schemas.py  tools.py  workspace.py
src/fusion/benchmark/: __init__.py  compare.py  shadow.py
src/fusion/cli/: __init__.py  app.py
src/fusion/config/: __init__.py  baseline.yaml  default_models.yaml  env.py  loader.py  pricing.yaml  routing_policies.yaml
src/fusion/evals/: __init__.py  answer_eval.py  context_eval.py  deterministic.py  disagreement_eval.py  engine.py  final_eval.py  llm_judge.py  outcome_eval.py  schemas.py
src/fusion/mcp_server/: __init__.py  schemas.py  server.py  (+1 more)
tests/: conftest.py  test_agent.py  test_anthropic_sampling.py  test_cli_config.py  test_compare_implement.py  test_cost_usage_fanout.py  test_deterministic_evals.py  test_mock_provider.py  test_pipeline_code_review.py  test_pipeline_debug.py  test_pipelines_comprehensive.py  test_providers.py  test_redaction.py  test_refine.py  test_routing.py  test_shadow.py  test_storage.py
(+41 files in other folders)
