[project]
name = "fusion-code-orchestrator"
version = "0.1.0"
description = "Multi-model orchestration and evaluation engine for coding workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Fusion Code Orchestrator Contributors" }]
keywords = ["mcp", "llm", "orchestration", "code-review", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/alexandre0sheva/fusion-code-orchestrator"
Repository = "https://github.com/alexandre0sheva/fusion-code-orchestrator"
Issues = "https://github.com/alexandre0sheva/fusion-code-orchestrator/issues"
Documentation = "https://github.com/alexandre0sheva/fusion-code-orchestrator/tree/main/docs"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
fusion = "fusion.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["fusion"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
